--- a/orchestrator/requirements.txt
+++ b/orchestrator/requirements.txt
@@ -3,6 +3,7 @@ uvicorn[standard]==0.27.0
 python-multipart==0.0.6
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
+bcrypt==4.0.1
 python-dotenv==1.0.0
 pydantic==2.5.3
 pydantic-settings==2.1.0
@@ -16,3 +17,4 @@ pyyaml==6.0.1
 httpx==0.26.0
 websockets==12.0
 anthropic==0.18.1
+cryptography==42.0.0
